# belief

./: CMakeLists.txt  LICENSE  README.md  hud.nss  printf.lua
chr/: CMakeLists.txt  enemyninjspr.h  forestbg.h  hud.h  playerspr.h  shurikspr.h  testbg.h
level/: CMakeLists.txt  rooms.c  rooms.h  testmap1_collision.c  testmap1_collision.h  testmap1_tile.c  testmap1_tile.h  testmap2_collision.c  testmap2_collision.h  testmap2_tilemap.c  testmap2_tilemap.h
src/: anim.c  anim.h  bankprgs.h  collision.cpp  collision.hpp  dmcirq.s  global.hpp  main.cpp  map.cpp  map.hpp  movement.cpp  movement.hpp  parallax.s  sprites.c  sprites.h
